<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.permeagility</groupId>
  <artifactId>permeagility</artifactId>
  <version>0.6.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>permeagility</name>
  <description>PermeAgility</description>
  
  <properties>
    <mainClass>permeagility.web.Server</mainClass>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <netbeans.hint.license>apache20</netbeans.hint.license>
  </properties>
  
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>www</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    
    <plugins>
          
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source/>
          <target/>
        </configuration>
      </plugin>
      
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
              <id>defaultrun</id>
              <phase>run</phase>
            <configuration>
              <target>
                <java fork="true" classname="${mainClass}" classpathref="maven.test.classpath">
                  <arg value=""/>
                </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
          <execution>
              <id>testrun</id>
              <phase>test</phase>
            <configuration>
              <target>
                <java fork="true" classname="${mainClass}" classpathref="maven.test.classpath">
                  <arg value="1998"/>
                  <arg value="plocal:testdb"/>
                  <arg value="selftest"/>
                  </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
          </executions>
      </plugin>
    
      <plugin>
	    <!-- Build an executable JAR -->
        <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-assembly-plugin</artifactId>
	    <configuration>
	      <archive>
	        <manifest>
	          <mainClass>permeagility.web.Server</mainClass>
	          <addClasspath>true</addClasspath>
	          <classpathPrefix>lib/</classpathPrefix>
	        </manifest>
	      </archive>
	      <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
	    </configuration>
	    <executions>
	      <execution>
	        <phase>package</phase>
	        <goals><goal>single</goal></goals>
	      </execution>
	    </executions>
     </plugin>
     
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>2.3.6</version>
          <extensions>true</extensions>
        </plugin>
    
     </plugins>
 
    </build>
    
  <dependencies>

	<!--  OrientDB core -->
    <dependency>
      <groupId>com.orientechnologies</groupId>
      <artifactId>orientdb-core</artifactId>
      <version>2.1.2</version>
      <type>bundle</type>
    </dependency>

    <!-- INCLUDE THIS IF YOU'RE CONNECTING TO THE DATABASE THROUGH THE REMOTE ENGINE -->
    <dependency>
      <groupId>com.orientechnologies</groupId>
      <artifactId>orientdb-client</artifactId>
      <version>2.1.2</version>
      <type>bundle</type>
    </dependency>
    <!-- END REMOTE ENGINE DEPENDENCY -->    

 </dependencies>
 
 
</project>
